syntax = "proto3";

package bidir_stream;

option go_package="./bidir_streampb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetEveryoneRequest{
    Greeting greeting = 1;
}

message GreetEveryoneResponse{
 string result = 1;
}

service GreetingService{
     //Bi Directional Straming
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
}