syntax = "proto3";

package cli_stream;

option go_package="./cli_streampb";


message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message LongGreetRequest{
    Greeting greeting = 1;
}

message LongGreetResponse{
 string result = 1;
}

service GreetingService{
     //Client Straming
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};
}